# the-eye

./: .env.example  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  manage.py  requirements.txt  setup.cfg
config/: asgi.py  urls.py  wsgi.py
config/settings/: common.py  local.py
consumer_affairs/: asgi.py  settings.py  urls.py  wsgi.py
consumer_affairs/settings/: common.py  docker.py
the_eye/: jobs.py  models.py  serializers.py  tests.py  urls.py  views.py
the_eye/management/commands/: wait_for_db.py
the_eye/migrations/: 0001_initial.py
the_eye/tests/: test_serializers.py  test_views.py
