[metadata]
name = django-the-eye
version = 0.1
description = A Django app to conduct web-based polls.
long_description = file: README.md
url = https://github.com/mrcrow85/the-eye
author = Martin Mena
author_email = martinmena@outlook.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0.3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.0.3
    djangorestframework >= 3.13.1
    django-rq >= 2.5.1
    psycopg2-binary >= 2.9.3

[options.packages.find]
exclude =
    config*
